# yolov8-digits-detection

./: mine.md  pyproject.toml
flagged/: log.csv
models/: yolov8n.onnx
src/: gradio_app.py  predict.py  results.py  train.py  visualization.py
src/object_detection/: base.py
src/utils/: utils.py
